--- a/Newbie/Challenge_2/base-apparel-coming-soon-master/index.html
+++ b/Newbie/Challenge_2/base-apparel-coming-soon-master/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,19 +15,22 @@
   </style>
 </head>
 <body>
+  <header class="site-header">
+    <img src="./images/logo.svg" alt="base apparel logo">
+  </header>
 
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <main class="site-main">
+    <div class="heroImage"></div>
+    <section class="main--section">
+      <h1> <span>we`re</span> coming soon</h1>
+      <p>Hello fellow shoppers! We`re currently building out new fashion store. Add your email below to stay up-to-date with announcements and out launch deals.</p>
+      <div class="input-field">
+        <input type="text" placeholder="Email Address">
+        <button>
+          <img src="./images/icon-arrow.svg" alt="arrow that represents submitting your email addres">
+        </button>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
